--- a/src/index.html
+++ b/src/index.html
@@ -80,66 +80,66 @@
             <div class="process__content"></div>
         </div>
     </section>
-    <section class="our-features">
-        <h3 class="our-features__heading">our features</h3>
-        <div class="our-features__section">
-            <h3 class="our-features__head">Visual Composer</h3>
-            <p class="our-features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code or to
+    <section class="features">
+        <h3 class="features__heading">our features</h3>
+        <div class="features__section">
+            <h3 class="features__head">Visual Composer</h3>
+            <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code or to
                 remember any shortcodes with our. </p>
         </div>
-        <div class="our-features__section">
-            <h3 class="our-features__head">Responsive</h3>
-            <p class="our-features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code or to
+        <div class="features__section">
+            <h3 class="features__head">Responsive</h3>
+            <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code or to
                 remember any shortcodes with our. </p>
         </div>
-        <div class="our-features__section">
-            <h3 class="our-features__head">Retina Ready</h3>
-            <p class="our-features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code or to
+        <div class="features__section">
+            <h3 class="features__head">Retina Ready</h3>
+            <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code or to
                 remember any shortcodes with our. </p>
         </div>
-        <div class="our-features__section">
-            <h3 class="our-features__head">Typography</h3>
-            <p class="our-features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code or to
+        <div class="features__section">
+            <h3 class="features__head">Typography</h3>
+            <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code or to
                 remember any shortcodes with our. </p>
         </div>
-        <div class="our-features__section">
-            <h3 class="our-features__head">VTheme Options Pannel</h3>
-            <p class="our-features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code or to
+        <div class="features__section">
+            <h3 class="features__head">VTheme Options Pannel</h3>
+            <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code or to
                 remember any shortcodes with our. </p>
         </div>
-        <div class="our-features__section">
-            <h3 class="our-features__head">Dummy Content</h3>
-            <p class="our-features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code or to
+        <div class="features__section">
+            <h3 class="features__head">Dummy Content</h3>
+            <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code or to
                 remember any shortcodes with our. </p>
         </div>
-        <div class="our-features__section">
-            <h3 class="our-features__head">Many Style Available</h3>
-            <p class="our-features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code or to
+        <div class="features__section">
+            <h3 class="features__head">Many Style Available</h3>
+            <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code or to
                 remember any shortcodes with our. </p>
         </div>
-        <div class="our-features__section">
-            <h3 class="our-features__head">Header Style</h3>
-            <p class="our-features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code or to
+        <div class="features__section">
+            <h3 class="features__head">Header Style</h3>
+            <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code or to
                 remember any shortcodes with our. </p>
         </div>
-        <div class="our-features__section">
-            <h3 class="our-features__head">10000+ icons</h3>
-            <p class="our-features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code or to
+        <div class="features__section">
+            <h3 class="features__head">10000+ icons</h3>
+            <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code or to
                 remember any shortcodes with our. </p>
         </div>
-        <div class="our-features__section">
-            <h3 class="our-features__head">Support</h3>
-            <p class="our-features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code or to
+        <div class="features__section">
+            <h3 class="features__head">Support</h3>
+            <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code or to
                 remember any shortcodes with our. </p>
         </div>
-        <div class="our-features__section">
-            <h3 class="our-features__head">Update</h3>
-            <p class="our-features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code or to
+        <div class="features__section">
+            <h3 class="features__head">Update</h3>
+            <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code or to
                 remember any shortcodes with our. </p>
         </div>
-        <div class="our-features__section">
-            <h3 class="our-features__head">SEO Ready</h3>
-            <p class="our-features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code or to
+        <div class="features__section">
+            <h3 class="features__head">SEO Ready</h3>
+            <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code or to
                 remember any shortcodes with our. </p>
         </div>
     </section>
