--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Roboto:100,300,400,500,700,900|Source+Sans+Pro:700&amp;subset=cyrillic-ext" rel="stylesheet">
 
-        <link class="nav__element" nk rel="stylesheet" href="./css/main.css">
-            <title>Unique-tech</title>
+    <link class="nav__element" nk rel="stylesheet" href="./css/main.css">
+    <title>Unique-tech</title>
 </head>
 
 <body>
@@ -42,9 +42,7 @@
             <div class="services__block">
                 <article class="services__content">
                     <h3>search engine optimization</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis quibusdam enim totam recusandae.
-                        Ratione aliquid excepturi qui eveniet alias nemo vel, quod quis commodi voluptates, aliquam nostrum
-                        rerum molestiae hic!
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis quibusdam enim totam recusandae. Ratione aliquid excepturi qui eveniet alias nemo vel, quod quis commodi voluptates, aliquam nostrum rerum molestiae hic!
                     </p>
                     <a href="#">view more </a>
                 </article>
@@ -52,9 +50,7 @@
             <div class="services__block">
                 <article class="services__content">
                     <h3>affiliate marketting</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis quibusdam enim totam recusandae.
-                        Ratione aliquid excepturi qui eveniet alias nemo vel, quod quis commodi voluptates, aliquam nostrum
-                        rerum molestiae hic!
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis quibusdam enim totam recusandae. Ratione aliquid excepturi qui eveniet alias nemo vel, quod quis commodi voluptates, aliquam nostrum rerum molestiae hic!
                     </p>
                     <a href="#">view more </a>
                 </article>
@@ -62,9 +58,7 @@
             <div class="services__block">
                 <article class="services__content">
                     <h3>web design</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis quibusdam enim totam recusandae.
-                        Ratione aliquid excepturi qui eveniet alias nemo vel, quod quis commodi voluptates, aliquam nostrum
-                        rerum molestiae hic!
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis quibusdam enim totam recusandae. Ratione aliquid excepturi qui eveniet alias nemo vel, quod quis commodi voluptates, aliquam nostrum rerum molestiae hic!
                     </p>
                     <a href="#">view more </a>
                 </article>
@@ -86,74 +80,62 @@
             <h3>our features</h3>
             <div>
                 <h3>Visual Composer</h3>
-                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with
-                    our.
+                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our.
                 </p>
             </div>
             <div>
                 <h3>Responsive</h3>
-                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with
-                    our.
+                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our.
                 </p>
             </div>
             <div>
                 <h3>Retina Ready</h3>
-                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with
-                    our.
+                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our.
                 </p>
             </div>
             <div>
                 <h3>Typography</h3>
-                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with
-                    our.
+                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our.
                 </p>
             </div>
             <div>
                 <h3>VTheme Options Pannel</h3>
-                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with
-                    our.
+                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our.
                 </p>
             </div>
             <div>
                 <h3>Dummy Content</h3>
-                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with
-                    our.
+                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our.
                 </p>
             </div>
             <div>
                 <h3>Many Style Available</h3>
-                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with
-                    our.
+                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our.
                 </p>
             </div>
             <div>
                 <h3>Header Style</h3>
-                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with
-                    our.
+                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our.
                 </p>
             </div>
             <div>
                 <h3>10000+ icons</h3>
-                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with
-                    our.
+                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our.
                 </p>
             </div>
             <div>
                 <h3>Support</h3>
-                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with
-                    our.
+                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our.
                 </p>
             </div>
             <div>
                 <h3>Update</h3>
-                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with
-                    our.
+                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our.
                 </p>
             </div>
             <div>
                 <h3>SEO Ready</h3>
-                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with
-                    our.
+                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our.
                 </p>
             </div>
         </div>
@@ -183,43 +165,51 @@
         </div>
     </section>
     <footer class="footer-wrapper">
-        <section class="footer container">
+        <section class="footer">
             <nav class="footer__menu">
-                <ul>
-                    <h3>PORTFOLIO</h3>
-                    <li><a href="#">Web Design</a></li>
-                    <li><a href="#">Branding & Idefinity</a></li>
-                    <li><a href="#">Mobile Design</a></li>
-                    <li><a href="#">Print</a></li>
-                    <li><a href="#">User Interfase</a></li>
+                <ul class="footer__list">
+                    <h3 class="menu__h3">PORTFOLIO</h3>
+                    <li><a class="link" href="#">Web Design</a></li>
+                    <li><a class="link" href="#">Branding & Idefinity</a></li>
+                    <li><a class="link" href="#">Mobile Design</a></li>
+                    <li><a class="link" href="#">Print</a></li>
+                    <li><a class="link" href="#">User Interfase</a></li>
                 </ul>
-                <ul>
-                    <h3>ABOUT</h3>
-                    <li><a href="#">The Company</a></li>
-                    <li><a href="#">History</a></li>
-                    <li><a href="#">Vision</a></li>
+                <ul class="footer__list">
+                    <h3 class="menu__h3">ABOUT</h3>
+                    <li><a class="link" href="#">The Company</a></li>
+                    <li><a class="link" href="#">History</a></li>
+                    <li><a class="link" href="#">Vision</a></li>
                 </ul>
-                <ul>
-                    <h3>GALLERY</h3>
-                    <li><a href="#">Flickr</a></li>
-                    <li><a href="#">Picasa</a></li>
-                    <li><a href="#">iStickPhoto</a></li>
-                    <li><a href="#">PhotoDune</a></li>
+                <ul class="footer__list">
+                    <h3 class="menu__h3">GALLERY</h3>
+                    <li><a class="link" href="#">Flickr</a></li>
+                    <li><a class="link" href="#">Picasa</a></li>
+                    <li><a class="link" href="#">iStickPhoto</a></li>
+                    <li><a class="link" href="#">PhotoDune</a></li>
 
                 </ul>
-                <ul>
-                    <h3>CONTACT</h3>
-                    <li><a href="#">Basic Info</a></li>
-                    <li><a href="#">Map</a></li>
-                    <li><a href="#">Contact Form</a></li>
+                <ul class="footer__list">
+                    <h3 class="menu__h3">CONTACT</h3>
+                    <li><a class="link" href="#">Basic Info</a></li>
+                    <li><a class="link" href="#">Map</a></li>
+                    <li><a class="link" href="#">Contact Form</a></li>
                 </ul>
             </nav>
             <div class="footer__social">
                 <div class="social">
-                    <div class="social__block"><a><i class="fab fa-facebook-f"></i></a></div>
-                    <div class="social__block"><a><i class="fab fa-twitter"></i></a></div>
-                    <div class="social__block"><a><i class="fab fa-google-plus-g"></i></a></div>
-                    <div class="social__block"><a><i class="fab fa-linkedin-in"></i></a></div>
+                    <div class="social__block">
+                        <a><img class="social__icon" src="img/svg/icons/fb.svg"></a>
+                    </div>
+                    <div class="social__block">
+                        <a><img class="social__icon" src="img/svg/icons/tw.svg"></a>
+                    </div>
+                    <div class="social__block">
+                        <a><img class="social__icon" src="img/svg/icons/g-plus.svg"></a>
+                    </div>
+                    <div class="social__block">
+                        <a><img class="social__icon" src="img/svg/icons/lin.svg"></a>
+                    </div>
                 </div>
                 <p>Copiyright © 2015 Syed Miraj.All rights reserved.</p>
             </div>
