--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Roboto:100,300,400,500,700,900|Source+Sans+Pro:700&amp;subset=cyrillic-ext" rel="stylesheet">
 
-        <link class="nav__element" nk rel="stylesheet" href="./css/main.css">
-            <title>Unique-tech</title>
+    <link class="nav__element" nk rel="stylesheet" href="./css/main.css">
+    <title>Unique-tech</title>
 </head>
 
 <body>
@@ -42,9 +42,7 @@
             <div class="services__block">
                 <article class="services__content">
                     <h3>search engine optimization</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis quibusdam enim totam recusandae.
-                        Ratione aliquid excepturi qui eveniet alias nemo vel, quod quis commodi voluptates, aliquam nostrum
-                        rerum molestiae hic!
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis quibusdam enim totam recusandae. Ratione aliquid excepturi qui eveniet alias nemo vel, quod quis commodi voluptates, aliquam nostrum rerum molestiae hic!
                     </p>
                     <a href="#">view more </a>
                 </article>
@@ -52,9 +50,7 @@
             <div class="services__block">
                 <article class="services__content">
                     <h3>affiliate marketting</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis quibusdam enim totam recusandae.
-                        Ratione aliquid excepturi qui eveniet alias nemo vel, quod quis commodi voluptates, aliquam nostrum
-                        rerum molestiae hic!
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis quibusdam enim totam recusandae. Ratione aliquid excepturi qui eveniet alias nemo vel, quod quis commodi voluptates, aliquam nostrum rerum molestiae hic!
                     </p>
                     <a href="#">view more </a>
                 </article>
@@ -62,9 +58,7 @@
             <div class="services__block">
                 <article class="services__content">
                     <h3>web design</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis quibusdam enim totam recusandae.
-                        Ratione aliquid excepturi qui eveniet alias nemo vel, quod quis commodi voluptates, aliquam nostrum
-                        rerum molestiae hic!
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis quibusdam enim totam recusandae. Ratione aliquid excepturi qui eveniet alias nemo vel, quod quis commodi voluptates, aliquam nostrum rerum molestiae hic!
                     </p>
                     <a href="#">view more </a>
                 </article>
@@ -86,74 +80,62 @@
             <h3>our features</h3>
             <div>
                 <h3>Visual Composer</h3>
-                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with
-                    our.
+                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our.
                 </p>
             </div>
             <div>
                 <h3>Responsive</h3>
-                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with
-                    our.
+                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our.
                 </p>
             </div>
             <div>
                 <h3>Retina Ready</h3>
-                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with
-                    our.
+                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our.
                 </p>
             </div>
             <div>
                 <h3>Typography</h3>
-                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with
-                    our.
+                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our.
                 </p>
             </div>
             <div>
                 <h3>VTheme Options Pannel</h3>
-                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with
-                    our.
+                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our.
                 </p>
             </div>
             <div>
                 <h3>Dummy Content</h3>
-                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with
-                    our.
+                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our.
                 </p>
             </div>
             <div>
                 <h3>Many Style Available</h3>
-                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with
-                    our.
+                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our.
                 </p>
             </div>
             <div>
                 <h3>Header Style</h3>
-                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with
-                    our.
+                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our.
                 </p>
             </div>
             <div>
                 <h3>10000+ icons</h3>
-                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with
-                    our.
+                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our.
                 </p>
             </div>
             <div>
                 <h3>Support</h3>
-                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with
-                    our.
+                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our.
                 </p>
             </div>
             <div>
                 <h3>Update</h3>
-                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with
-                    our.
+                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our.
                 </p>
             </div>
             <div>
                 <h3>SEO Ready</h3>
-                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with
-                    our.
+                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our.
                 </p>
             </div>
         </div>
@@ -171,10 +153,48 @@
         </div>
     </section>
     <section class="team">
-        <div class="container">
+        <h2 class="team__name grey-name">OUR TEAM MEMBERS</h2>
+        <svg class="airplane"></svg>
+        <div class="team__container">
+            <figure class="team__member">
+                <img class="team__img" src="img/svg/team1.svg" alt="Foto of member">
+                <figcaption class="member">
+                    <h3 class="member__name">SYED MIRAJ</h3>
+                    <p class="member__position">UI & UX DESINER</p>
+                </figcaption>
+            </figure>
+            <figure class="team__member">
+                <img class="team__img" src="img/svg/team2.svg" alt="Foto of member">
+                <figcaption class="member">
+                    <h3 class="member__name">PENY HUSTON</h3>
+                    <p class="member__position">DEVELOPER</p>
+                </figcaption>
+            </figure>
+            <figure class="team__member">
+                <img class="team__img" src="img/svg/team3.svg" alt="Foto of member">
+                <figcaption class="member">
+                    <h3 class="member__name">LENNERD SHELLY</h3>
+                    <p class="member__position">REWIEWER</p>
+                </figcaption>
+            </figure>
+            <figure class="team__member">
+                <img class="team__img" src="img/svg/team4.svg" alt="Foto of member">
+                <figcaption class="member">
+                    <h3 class="member__name">SHALDON CUPPER</h3>
+                    <p class="member__position">MARKETTER</p>
+                </figcaption>
+            </figure>
+            <figure class="team__member">
+                <img class="team__img" src="img/svg/team5.svg" alt="Foto of member">
+                <figcaption class="member">
+                    <h3 class="member__name">ASHLEY COLE</h3>
+                    <p class="member__position">MANAGEMENT</p>
+                </figcaption>
+            </figure>
         </div>
     </section>
     <section class="support">
+
         <div class="container">
         </div>
     </section>
